--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Portfolio</title>
-    <link rel="stylesheet" href="\portfolio\styles.css">
+    <link rel="stylesheet" href="/portfolio/styles.css">
     <script src="https://kit.fontawesome.com/76016925ff.js" crossorigin="anonymous"></script>
 </head>
 <body>
