--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="/portfolio/about.html">About</a></li>
-                    <li><a href="\portfolio\services.html">Services</a></li>
+                    <li><a href="/portfolio/services.html">Services</a></li>
                     <li><a href="/portfolio/projects.html">Projects</a></li>
                     <li><a href="/portfolio/contact.html">Contact</a></li>
                     <li><a href="paper.html">Research Papers</a></li>
