--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="portfolio/pictures/1739243953835 - Copy.jpg" height="50" width="150">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/portfolio/about.html">About</a></li>
+                    <li><a href="//portfolio/about.html">About</a></li>
                     <li><a href="/portfolio/services.html">Services</a></li>
                     <li><a href="/portfolio/projects.html">Projects</a></li>
                     <li><a href="/portfolio/contact.html">Contact</a></li>
